# sgpa

./: .gitignore  LICENSE  README.md  backend_requisitos.md  docker-compose.yml  frontend_requisitos.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/models/: lesson_plan.py
backend/app/routes/: health_route.py  lesson_plan_route.py  smart_assist_route.py
backend/app/schemas/: lesson_plan.py  smart_assist.py
backend/app/services/: llm_service.py
backend/tests/: conftest.py  test_lesson_plan.py  test_smart_assist.py
frontend/: .dockerignore  README.md  package-lock.json  package.json
frontend/src/: App.jsx
