[project]
name = "sgpa-backend"
version = "0.1.0"
description = "Sistema de Gerenciamento de Planos de Aula"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flasgger>=0.9.7.1",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.7.1",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
]
